# cabal-doctest-repro

./: GhcMod.hs  ghc-mod.cabal
GhcMod/Exe/: Boot.hs
